--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,14 @@
     <string name="jack_of_hearts">Jack of hearts</string>
     <string name="queen_of_hearts">Queen of hearts</string>
     <string name="king_of_hearts">King of hearts</string>
+    <string name="bet_text">Bet</string>
+    <string name="deal_text">Deal</string>
+    <string name="hit_text">Hit</string>
+    <string name="stay_text">Stay</string>
+    <string name="coins5">Bet 5 Coins</string>
+    <string name="coins25">Bet 25 Coins</string>
+    <string name="coins50">Bet 50 Coins</string>
+    <string name="coins100">Bet 100 Coins</string>
+    <string name="click_coins_text">Click Coins to Place Bet</string>
     <string name="face_down_playing_card">Face down playing card</string>
 </resources>
