--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">BlackJack</string>
     <string name="action_settings">Settings</string>
+    <string name="action_new_game">New Game</string>
     <string name="ace_of_spades">Ace of spades</string>
     <string name="two_of_spades">Two of spades</string>
     <string name="three_of_spades">Three of spades</string>
