--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="coins100">Bet 100 Coins</string>
     <string name="click_coins_text">Click Coins to Place Bet</string>
     <string name="face_down_playing_card">Face down playing card</string>
+    <string name="title_activity_about">AboutActivity</string>
 </resources>
